# serializer version: 1
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-8597e52a
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example-8597e52a
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '<not included>',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          8597e52a
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
